# cm_feathers

./: README.md  README.txt  pyproject.toml
.github/workflows/: tests.yaml
docs/: demo.py
src/feathers/: __init__.py  feathers.py
tests/: test_init.py
