[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
[project]
name = "cm_feathers"
version = "25.04.30"
description = "Matplotlib colormaps inspired by bird feathers"
readme = "README.md"
requires-python = ">=3.9"
authors = [
	{name = "Harrison Nicholls, email = harrison.nicholls@physics.ox.ac.uk"},
]
keywords = [
    "Visualization",
    "Color",
    "Plotting",
]
license = {text = "Apache 2.0 License"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "matplotlib",
    "numpy",
]

[project.urls]
homepage = "https://github.com/nichollsh/cm_feathers"
issues = "https://github.com/nichollsh/cm_feathers/issues"

[tool.setuptools]
package-dir = {"feathers" = "src/feathers" }
include-package-data = true

[tool.coverage.run]
branch = true
source = ["feathers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 96
target-version = "py311"
extend-exclude = ["*ipynb"]

[tool.ruff.lint]
select = [
	"F",  # Pyflakes
	"E",  # pycodestyle (error)
	"W",  # pycodestyle (warning)
    "I",    # isort
]
ignore = [
    "E501", # Line too long
]

[tool.ruff.lint.isort]
known-first-party=["feathers"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

